[gd_scene load_steps=2 format=3 uid="uid://b2rba1vvn86ow"]

[ext_resource type="Script" uid="uid://dwf6qa0mbwlmm" path="res://UI/GameOverUI/game_over_ui.gd" id="1_ssmmn"]

[node name="PanelContainerGameOver" type="PanelContainer"]
custom_minimum_size = Vector2(0, 177)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -410.0
offset_top = -94.0
offset_right = 410.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ssmmn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="LabelGameOver" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Congratulations! you found the emerald cave in %d days!"
horizontal_alignment = 1

[node name="LabelThanks" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50

[node name="ButtonNextDay" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
text = "Next Day"

[node name="ButtonPrestige" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Prestige"

[node name="TimerButtons" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonNextDay" to="." method="_on_button_play_again_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonPrestige" to="." method="_on_button_prestige_pressed"]
[connection signal="timeout" from="TimerButtons" to="." method="_on_timer_buttons_timeout"]
